# mxnet

./: .asf.yaml  .clang-format  .clang-tidy  .cmakelintrc  .codecov.yml  .drone.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .licenserc.yaml  .mxnet_root  .rat-excludes  .travis.yml  0001-added-support-for-tuple-dimenions-except-for-upsampl.patch  0001-cpu-x64-add-binary-postops-to-brgemm.patch  0001-cpu-x64-binary-postops-per_tensor-bcast-in-gemm-ip-u.patch  0001-replace-NULL-by-nullptr-literal-in-backend.patch  0002-modified-mshadow-to-support-separate-dimension-scale.patch  0003-add-make-script.patch  CHANGELOG.md  CHANGES.md  CITATION  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Config  DEVELOPMENT.md  DISCLAIMER  DISCLAIMER-WIP  DNNL_README.md  Dockerfile  Jenkinsfile  Jenkinsfile_windows  KEYS  LICENSE  LICENSE.md  (+70 more)
cpp-package/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cpp-package.mk
cpp-package/example/: CMakeLists.txt  Makefile  README.md  alexnet.cpp  charRNN.cpp  example.mk  get_data.sh  get_mnist.sh  googlenet.cpp  inception_bn.cpp  lenet.cpp  lenet_with_mxdataiter.cpp  mlp.cpp  mlp_cpu  mlp_cpu.cpp  mlp_csv.cpp  mlp_csv_cpu.cpp  mlp_gpu  mlp_gpu.cpp  mnist_to_csv.py  resnet.cpp  run_lenet_with_mxdataiter.sh  test_kvstore.cpp  test_ndarray.cpp  test_ndarray_copy.cpp  test_optimizer.cpp  test_regress_label.cpp  test_score.cpp  utils.h
cpp-package/example/cpp-predictor/: cpp_pred.cpp  predictor.h
cpp-package/example/feature_extract/: Makefile  README.md  feature_extract.cpp  prepare_data_with_opencv.cpp  run.sh
cpp-package/example/inference/: CMakeLists.txt  Makefile  README.md  imagenet_inference.cpp  inception_inference.cpp  inference.mk  sentiment_analysis_rnn.cpp  simple_rnn.cpp  unit_test_imagenet_inference.sh  unit_test_inception_inference.sh  unit_test_sentiment_analysis_rnn.sh  unit_test_simple_rnn.sh
cpp-package/example/unittests/: unit_test_mlp_csv.sh
cpp-package/include/mxnet-cpp/: .gitignore  CPPLINT.cfg  MxNetCpp.h  base.h  contrib.h  executor.h  executor.hpp  initializer.h  io.h  io.hpp  kvstore.h  kvstore.hpp  lr_scheduler.h  metric.h  model.h  monitor.h  monitor.hpp  ndarray.h  ndarray.hpp  op.h  op_map.h  op_suppl.h  op_util.h  operator.h  operator.hpp  optimizer.h  optimizer.hpp  shape.h  symbol.h  symbol.hpp  utils.h
cpp-package/scripts/: OpWrapperGenerator.py  lint.py
cpp-package/src/OpWrapperGenerator/: OpWrapperGenerator.py  OpWrapperGenerator.pyproj  OpWrapperGenerator.sln  README.md  move-if-change.sh
cpp-package/tests/: ci_test.sh
cpp-package/unittests/: unit_test_mlp_csv_cpu.sh
plugin/caffe/: CMakeLists.txt  README.md  caffe.mk  caffe_base.cc  caffe_base.h  caffe_blob.cc  caffe_blob.h  caffe_common.cc  caffe_common.h  caffe_data_iter.cc  caffe_fieldentry.h  caffe_init.cc  caffe_init.h  caffe_loss-inl.h  caffe_loss.cc  caffe_loss.cu  caffe_mode.cc  caffe_mode.h  caffe_op-inl.h  caffe_op.cc  caffe_op.cu  caffe_operator-inl.h  caffe_operator.cc  caffe_operator.cu  caffe_operator_util.cc  caffe_operator_util.h  caffe_stream.cc  caffe_stream.h  dmlc_parameter.h  layerparameter_stream.cc  layerparameter_stream.h  tensor_to_blob.cc  tensor_to_blob.h
tests/: .gitignore  CMakeLists.txt  README.md  requirements.txt  test_simple_engine.cc  test_threaded_engine.cc
tests/binary/: test_converter.py
tests/ci_build/: Dockerfile.amzn_linux_cpu  Dockerfile.build_cuda  Dockerfile.build_cuda8_cudnn7  Dockerfile.caffe_gpu  Dockerfile.cpu  Dockerfile.cpu_clang  Dockerfile.cpu_cuda  Dockerfile.cpu_gpu_cuda_mklml  Dockerfile.cpu_mklml  Dockerfile.crosstool  Dockerfile.doc  Dockerfile.emscripten  Dockerfile.gpu  Dockerfile.gpu_build  Dockerfile.gpu_mklml  Dockerfile.license  Dockerfile.lint  Dockerfile.mkl  Dockerfile.mklml_gpu  Dockerfile.spell_checker  Dockerfile.ubuntu1404_crosstool  Dockerfile.ubuntu1404_cuda75_cudnn5  README.md  ci_build.sh  pylintrc  run_gpu_unittest.sh  with_the_same_user
tests/ci_build/deploy/: aws  (+1 more)
tests/cpp/: .gitignore  CMakeLists.txt  cp_decomp_linalg_test.cc  cp_decomp_test.cc  mxrtc_test.cc  storage_test.cc  storage_unittest.cc  test_main.cc  threaded_engine_test.cc  threaded_engine_unittest.cc  unfold_test.cc  unfold_test_gpu.cu  unittest.mk
tests/examples/: test_examples.py
tests/integrationtests/: onnx_backend_test.py  test_onnx.py
tests/jenkins/: format  run_as_user.sh  run_julia_test.sh  run_test.sh  run_test_amzn_linux_gpu.sh  run_test_installation_docs.sh  run_test_pip_installations.sh  run_test_ubuntu.sh  set_user_permissions.sh
tests/nightly/: .gitignore  Jenkinsfile  JenkinsfileForBinaries  README.md  common.py  dist_allreduce_sync_kvstore.py  dist_async_kvstore.py  dist_device_sync_kvstore.py  dist_device_sync_kvstore_base.py  dist_device_sync_kvstore_byteps.py  dist_device_sync_kvstore_custom.py  dist_device_sync_kvstore_horovod.py  dist_lenet.py  dist_sync_kvstore.py  download.sh  hosts  multi_lenet.py  perfRun.sh  sh2ju.sh  test.py  test_all.sh  test_config.txt  test_distributed_training-gpu.sh  test_dropout.py  test_dropout_with_seed.py  test_fixed_seed.py  test_image_classification.sh  test_ipynb.py  test_kvstore.py  test_large_array.py  test_large_vector.py  test_mxnet_keras_integration_cpu.sh  test_mxnet_keras_integration_gpu.sh  test_notebook.sh  test_np_large_array.py  test_np_random.py  test_optimizer.py  test_python.sh  test_server_profiling.py  test_tlocal_racecondition.py  (+3 more)
tests/python/: README.md  conftest.py  get_data.py  models.py  requirements.test.txt  test_bind.py  test_conv.py  test_infer_shape.py  test_inter_shape.py  test_io.py  test_kvstore.py  test_mlp.py  test_mlp_multi_devices.py  test_mlp_multi_devices.py.bak  test_narray.py  test_operator.py  test_quantization_gpu.py  test_symbol.py
tests/sharedmemoryhelper/: CMakeLists.txt  main.cc
tests/travis/: error_detector.sh  is_core_changed.sh  r_vignettes.R  run_test.sh  setup.sh  setup_osx.sh  travis_after_failure.sh
tests/tutorials/: test_sanity_tutorials.py  test_tutorials.py
tools/binary_converter/: CMakeLists.txt  main.cpp
(+10772 files in other folders)
